# polygon

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFreeType.cmake  FindSFML.cmake  FindVulkan.cmake  FindmbedTLS.cmake
data/shaders/: frag.spv
source/: acceptor.cpp  acceptor.h  action-state.h  animation-handler.cpp  animation-handler.h  animation.cpp  animation.h  city.cpp  city.h  client-main.cpp  connection.cpp  connection.h  error.cpp  error.h  game-state-editor.cpp  game-state-editor.h  game-state-start.cpp  game-state-start.h  game-state.h  game.cpp  game.h  gui-entry.cpp  gui-entry.h  gui-style.cpp  gui-style.h  gui.cpp  gui.h  header.cpp  header.h  main.cpp  map.cpp  map.h  message-type.h  message.cpp  message.h  server-main.cpp  socket-implementation.cpp  socket-implementation.h  socket.cpp  socket.h  (+10 more)
